--- a/LECTURE15.Rmd
+++ b/LECTURE15.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Parameter estimation!"
+title: "Parameter estimation"
 author: "NRES 470/670"
-date: "Spring 2021"
+date: "Spring 2022"
 output: 
   html_document: 
     theme: spacelab
