--- a/LECTURE13.Rmd
+++ b/LECTURE13.Rmd
@@ -215,7 +215,7 @@ What if there are 15 independent populations instead of five? Then what is the c
 
 $[1-(1-p_e)^{10}]^5$ 
 
-_This works out to be around 3% -- we have effectively spread out the risk, so that despite a relatively high extinction risk at the patch level, the metapopulation is unlikely to experience global extinction_
+_This works out to be around 4% -- we have effectively spread out the risk, so that despite a relatively high extinction risk at the patch level, the metapopulation is unlikely to experience global extinction_
 
 **Q**: if we included dispersal among patches, would dispersal serve to further reduce the risk of global extinction? Why or why not? 
 
@@ -235,9 +235,9 @@ Just like with an age-structured population, where vital rates and equilibrium a
 
 In fact, some patches may be so resource-poor or afford such bad protection from predators that population growth is negative (i.e., $r$ below zero, or $\lambda$ less than 1). Other patches may represent perfect conditions for population growth (at least if the habitat isn't too crowded)!
 
-A **source population** is defined as a patch that provides a *net donation of immigrants** to nearby patches with lower-quality habitat (i.e., sink populations or pseudo-sink populations). A source population should persist indefinitely, even in isolation. 
+A **source population** is defined as a patch that maintains a positive growth rate (r>0) and contributes more **immigrants** to nearby patches (i.e., sink populations or pseudo-sink populations) than it receives back from these neighboring patches. A source population should persist indefinitely, even in isolation. 
 
-A **sink population** is defined as a patch that *would go extinct* if it were not for the constant input of immigrants from nearby **source populations**.
+A **sink population** is defined as a patch that *would go extinct* if it were not for the constant input of immigrants from nearby **source populations** (r<0). A sink population can only persist if paired with a source population.
 
 **Q**: how is the concept of a sink population related to the *rescue effect*?
 
@@ -270,15 +270,11 @@ NOTE: maximum dispersal rate (in this model) is the rate of dispersal between ne
 
 3. Run the model, view the results and make sure you understand how the model works.
 
-**Q**: in this scenario, a constant fraction of each population disperses to each neighboring patch each year. Is this realistic? Can you think of real-world scenarios that would lead to different dispersal patterns? 
-
-**Q**: what data sources might be helpful in understanding dispersal rates in a metapopulation?
-
 4. Change the dispersal rate to zero and run the model. What happens? Does this make sense?     
 
 5. Change the dispersal rate to 0.01 (1%). What happens now? Does the distant sink still function as a sink population? That is, is it occupied continuously? If not, what is the minimum dispersal rate that generally ensures that the distant sink is consistently (continuously) occupied (make sure the lower bound of the 95% region for abundance in this patch is above 2 for all years)? [tophat]
 
-6. Change the dispersal rate back to 10%. Now reduce the population growth rate in the source population ("lambda good") to 1.1. What happens now? Does the source population still operate as an effective source (that is, does it support consistent occupation of all the sinks)? What happens if you set the maximum growth rate in the source patch to 1? Could such a population ever serve as an effective source population? 
+6. Now reduce the population growth rate in the source population ("lambda good") to 1.1. What happens now? Does the source population still operate as an effective source (that is, does it support consistent occupation of all the sinks)? What happens if you set the maximum growth rate in the source patch to 1? Could such a population ever serve as an effective source population? 
 
 #### A pseudo-sink!
 
