--- a/LECTURE15.Rmd
+++ b/LECTURE15.Rmd
@@ -97,10 +97,8 @@ In this case, computing survival and fecundity (and variation in these parameter
 - Estimating landscape-scale movements can require an even more costly and time-consuming study.
 - Emigration and survival can be difficult to tease apart in many cases. 
 
-See below for more! Also this is the main focus of the Population Dynamics course (NRES 488, the next course in the Wildlife Ecology and Conservation sequence!)
+We will return to CMR data shortly (and in the optional Lab 7), but first...
 
-### Data on spatial structure/habitat
-- See [links](FINAL_PROJECTS.html) on Final projects page
 
 ### What if there's "no data"?
 
@@ -140,14 +138,13 @@ Remember the ["Stone Soup" analogy!](https://en.wikipedia.org/wiki/Stone_Soup) -
 ## Aside- is expert opinion okay to use???
 
 - Not ideal, because it is hard or impossible to validate, and hard to document, but ...
-- That is what will be done in any case!
+- That is often the default in practice   
 - And it is better to use it than to do nothing
 - And it is better to document that expert opinion was used than to proceed with conservation planning in the absence of stating sources and assumptions
 - It is a starting point (and sometimes a reasonable one)
 
 
 ## Capture-mark-recapture (CMR) analysis
-
 
 ![](statistics1.png)
 
